<resources>
    <string name="app_name">EdelHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Max Mustermann</string>
    <string name="nav_header_subtitle">Max.musster@mail.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_registrieren">Registrieren</string>
    <string name="menu_geraeteliste">Geräteliste</string>
    <string name="menu_tools">Abmelden</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vorname"> "Vorname" </string>
    <string name="nachname"> "Nachname"</string>
    <string name="tel_nummer"> "Telefon Nummer" </string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>

</resources>
